Xtreme Support & AI lord focus
- the patcher also modifies the Extreme.exe if it exists, resulting in two loading bars
- added the possibility to disable the magic bar in Extreme
- makes more of the AI's attack troops focus on the enemy lord when the walls are breached

--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -1120,11 +1120,14 @@
     <EmbeddedResource Include="CodeBlocks\o_healer_next.block" />
     <EmbeddedResource Include="CodeBlocks\o_healer_jesternext.block" />
     <EmbeddedResource Include="CodeBlocks\o_healerroam.block" />
+    <EmbeddedResource Include="CodeBlocks\ai_attackwave_lord.block" />
     <None Include="CodeBlocks\o_healer_cmp.block" />
     <EmbeddedResource Include="CodeBlocks\o_jesterroam.block" />
     <EmbeddedResource Include="CodeBlocks\o_healer_plague.block" />
     <EmbeddedResource Include="CodeBlocks\random.block" />
     <EmbeddedResource Include="CodeBlocks\o_keys_menu.block" />
+    <EmbeddedResource Include="CodeBlocks\o_xtreme_bar1.block" />
+    <EmbeddedResource Include="CodeBlocks\o_xtreme_bar2.block" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
