AICharacter introduction & namespace changes

--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -64,6 +64,15 @@
     <Compile Include="..\CodeBlox\CodeBlock.cs">
       <Link>CodeBlocks\CodeBlock.cs</Link>
     </Compile>
+    <Compile Include="AICharacters\AICCollection.cs" />
+    <Compile Include="AICharacters\AICharacter.cs" />
+    <Compile Include="AICharacters\AICIndex.cs" />
+    <Compile Include="AICharacters\AIPersonality.cs" />
+    <Compile Include="AICharacters\AIPField.cs" />
+    <Compile Include="AICharacters\AIPFieldType.cs" />
+    <Compile Include="AICharacters\LineReader.cs" />
+    <Compile Include="AICharacters\LineWriter.cs" />
+    <Compile Include="AICharacters\UnitType.cs" />
     <Compile Include="Debug.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Localization\LanguageWindow.xaml.cs">
