--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -70,9 +70,10 @@
     <Compile Include="AICharacters\AIPersonality.cs" />
     <Compile Include="AICharacters\AIReader.cs" />
     <Compile Include="AICharacters\AIWriter.cs" />
+    <Compile Include="AICharacters\PersonalityEnums\Resource.cs" />
     <Compile Include="AICharacters\PersonalityEnums\TargetingType.cs" />
     <Compile Include="AICharacters\RWAttributes.cs" />
-    <Compile Include="AICharacters\PersonalityEnums\UnitType.cs" />
+    <Compile Include="AICharacters\PersonalityEnums\Unit.cs" />
     <Compile Include="Debug.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Localization\LanguageWindow.xaml.cs">
