--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -77,6 +77,7 @@
     <Compile Include="AICharacters\PersonalityEnums\WorkshopSettings.cs" />
     <Compile Include="AICharacters\RWAttributes.cs" />
     <Compile Include="AICharacters\PersonalityEnums\Units.cs" />
+    <Compile Include="Configuration.cs" />
     <Compile Include="Debug.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Localization\LanguageWindow.xaml.cs">
@@ -1441,6 +1442,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="icon6.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Graphics\refresh.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
