--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Patching\Section\SectionEditor.cs" />
     <Compile Include="Patching\Section\SectionHeader.cs" />
     <Compile Include="Version.cs" />
+    <Compile Include="_Crusader\Building.cs" />
     <Compile Include="_Crusader\UI_Button.cs" />
     <Page Include="Localization\LanguageWindow.xaml">
       <SubType>Designer</SubType>
@@ -1453,6 +1454,7 @@
     <EmbeddedResource Include="..\SHC_AIV\history\wolf1.aiv">
       <Link>AIVs\EvreyHistory\wolf1.aiv</Link>
     </EmbeddedResource>
+    <EmbeddedResource Include="CodeBlocks\o_firecooldown.block" />
     <None Include="CodeBlocks\o_healer_cmp.block" />
     <EmbeddedResource Include="CodeBlocks\o_jesterroam.block" />
     <EmbeddedResource Include="CodeBlocks\o_healer_plague.block" />
@@ -1460,6 +1462,7 @@
     <EmbeddedResource Include="CodeBlocks\o_keys_menu.block" />
     <EmbeddedResource Include="CodeBlocks\o_xtreme_bar1.block" />
     <EmbeddedResource Include="CodeBlocks\o_xtreme_bar2.block" />
+    <EmbeddedResource Include="CodeBlocks\u_ballistamonk.block" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
