--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -1463,6 +1463,7 @@
     <EmbeddedResource Include="CodeBlocks\o_xtreme_bar1.block" />
     <EmbeddedResource Include="CodeBlocks\o_xtreme_bar2.block" />
     <EmbeddedResource Include="CodeBlocks\u_ballistamonk.block" />
+    <EmbeddedResource Include="CodeBlocks\o_onlyai_assassins.block" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
