Add fix for laddermen cost display in engineers guild.

--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -159,6 +159,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <EmbeddedResource Include="CodeBlocks\ai_fix_laddermen_with_enclosed_keep.block" />
+    <EmbeddedResource Include="CodeBlocks\ui_fix_laddermen_cost_display_in_engineers_guild.block" />
     <EmbeddedResource Include="CodeBlocks\o_armory_marketplace_weapon_order_fix1.block" />
     <EmbeddedResource Include="CodeBlocks\o_armory_marketplace_weapon_order_fix2.block" />
     <EmbeddedResource Include="CodeBlocks\o_armory_marketplace_weapon_order_fix3.block" />
