Fix playercolor in AI taunt messages.

--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -165,6 +165,7 @@
     <EmbeddedResource Include="CodeBlocks\o_playercolor_ai_order_menu_emblem.block" />
     <EmbeddedResource Include="CodeBlocks\o_playercolor_ai_video_message_emblem.block" />
     <EmbeddedResource Include="CodeBlocks\o_playercolor_ai_video_message_shield.block" />
+    <EmbeddedResource Include="CodeBlocks\o_playercolor_ai_video_message_shield_enemy_taunt.block" />
     <EmbeddedResource Include="CodeBlocks\o_playercolor_ai_video_message_shield_pre.block" />
     <EmbeddedResource Include="CodeBlocks\ui_fix_laddermen_cost_display_in_engineers_guild.block" />
     <EmbeddedResource Include="CodeBlocks\o_armory_marketplace_weapon_order_fix1.block" />
