--- a/UnofficialCrusaderPatchConsole/UnofficialCrusaderPatchConsole.csproj
+++ b/UnofficialCrusaderPatchConsole/UnofficialCrusaderPatchConsole.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileUtils.cs" />
+    <Compile Include="PathUtils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
