Updated AICUpdater project to reflect json changes

--- a/IDAParser/IDAParser.csproj
+++ b/IDAParser/IDAParser.csproj
@@ -42,46 +42,43 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\UnofficialCrusaderPatch\AICharacters\AICCollection.cs">
-      <Link>AICharacters\AICCollection.cs</Link>
-    </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AICharacters\AICharacter.cs">
+    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\AICharacter.cs">
       <Link>AICharacters\AICharacter.cs</Link>
     </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AICharacters\AICIndex.cs">
-      <Link>AICharacters\AICIndex.cs</Link>
+    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\AICharacterName.cs">
+      <Link>AICharacters\AICharacterName.cs</Link>
     </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AICharacters\AIFileHeader.cs">
-      <Link>AICharacters\AIFileHeader.cs</Link>
+    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\AICollection.cs">
+      <Link>AICharacters\AICollection.cs</Link>
     </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AICharacters\AIPersonality.cs">
+    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\AIHeader.cs">
+      <Link>AICharacters\AIHeader.cs</Link>
+    </Compile>
+    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\AIPersonality.cs">
       <Link>AICharacters\AIPersonality.cs</Link>
     </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AICharacters\AIReader.cs">
-      <Link>AICharacters\AIReader.cs</Link>
+    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\AIPersonalityFieldsEnum.cs">
+      <Link>AICharacters\AIPersonalityFieldsEnum.cs</Link>
     </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AICharacters\AIWriter.cs">
-      <Link>AICharacters\AIWriter.cs</Link>
-    </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AICharacters\PersonalityEnums\Buildings.cs">
+    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\PersonalityEnums\Buildings.cs">
       <Link>AICharacters\PersonalityEnums\Buildings.cs</Link>
     </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AICharacters\PersonalityEnums\Resources.cs">
+    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\PersonalityEnums\Resources.cs">
       <Link>AICharacters\PersonalityEnums\Resources.cs</Link>
     </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AICharacters\PersonalityEnums\SiegeEngines.cs">
+    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\PersonalityEnums\SiegeEngines.cs">
       <Link>AICharacters\PersonalityEnums\SiegeEngines.cs</Link>
     </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AICharacters\PersonalityEnums\TargetingType.cs">
+    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\PersonalityEnums\TargetingType.cs">
       <Link>AICharacters\PersonalityEnums\TargetingType.cs</Link>
     </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AICharacters\PersonalityEnums\Units.cs">
+    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\PersonalityEnums\Units.cs">
       <Link>AICharacters\PersonalityEnums\Units.cs</Link>
     </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AICharacters\PersonalityEnums\WorkshopSettings.cs">
+    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\PersonalityEnums\WorkshopSettings.cs">
       <Link>AICharacters\PersonalityEnums\WorkshopSettings.cs</Link>
     </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AICharacters\RWAttributes.cs">
+    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\RWAttributes.cs">
       <Link>AICharacters\RWAttributes.cs</Link>
     </Compile>
     <Compile Include="Program.cs" />
